[build-system]
requires = ["uv_build>=0.8.18,<0.9.0"]
build-backend = "uv_build"

[project]
name = "wavinfo"
version = "3.1.0"
description = "Probe WAVE files for all metadata"
authors = [{ name = "Jamie Hardt", email = "jamiehardt@me.com"}]
license = "MIT" 
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'License :: OSI Approved :: MIT License',
    'Topic :: Multimedia',
    'Topic :: Multimedia :: Sound/Audio',
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
homepage = "https://github.com/iluvcapra/wavinfo"
repository = "https://github.com/iluvcapra/wavinfo.git"
documentation = "https://wavinfo.readthedocs.io/"
urls.Tracker = 'https://github.com/iluvcapra/wavinfo/issues' 
keywords = [
    'waveform', 
    'metadata', 
    'audio', 
    'ebu', 
    'smpte', 
    'avi', 
    'library', 
    'film', 
    'broadcast' 
]
dependencies = [
    "lxml>=6.0.2",
]

[project.scripts]
ptulsconv = "ptulsconv:__main__.main"

[tool.pyright]
typeCheckingMode = "basic"

[tool.pylint]
max-line-length = 88
disable = [
    "C0103", # (invalid-name)
    "C0114", # (missing-module-docstring)
    "C0115", # (missing-class-docstring)
    "C0116", # (missing-function-docstring)
    "R0903", # (too-few-public-methods)
    "R0913", # (too-many-arguments)
    "W0105", # (pointless-string-statement)
]

[dependency-groups]
dev = [
    "ruff>=0.14.0",
]
doc = [
    "sphinx>=7.1.2",
    "sphinx-rtd-theme>=3.0.2",
]
